# Records

./: README.md  git.md  github.md  mac.md
Android/: README.md  auto_generate_jni_header.md  ndk_build_protobuf.md  ndk_cross_compilation.md
Android/jni/: .com_baidu_paddle_liteeeeee_Tensor.h.swp  Tensor.java  jni_header.md
Android/lab/: README.md
Android/lab/simple_libs/: CMakeLists.txt  build.sh  hello.cc  hello.h
Android/lab/src/: CMakeLists.txt  build.sh  main.cc
Cxx/File/: README.md  file1.cc  file2.cc  file3.cc  file4.cc
Linux/: .bashrc.md  JetsonNano.md  README.md  bashrc.md  command.md  linux_server_mount2_local.md  ruby.md  share_net.md  wifi.md
Linux/build-system/: README.md
Opencl/: opencl.md
Opencv/: README.md  build_opencv.sh
Papers/: README.md
Python3/: README.md
Python3/flask/: client.py  server.py
Python3/utils/: DecoratorClass.py  DecoratorFunction.py  download.py
Tensorflow/: benchmark.py  compile.sh  conv2d.py  pb2tensorrt.py  unitTest.py
Tensorflow/fascinated-bug/: tf.py_func.py
Tensorflow/mobilenet/: mobilenet_v1.py  mobilenet_v1_eval.py  mobilenet_v1_frozen.py  mobilenet_v1_test.py  mobilenet_v1_train.py  notes.txt
Tensorflow/tflite/: benchmark.sh  generate_data.py  pipeline-quantization.py  pipeline.py
Tensorflow/tfrecord/: dataset_util.py  preprocessing.py  tutorial_of_tfrecord.py
Tensorflow/utils/: AutoGraph.py  convert.txt  create_tflite.py  custom_training_walkthrough.py  low_level_intro.py  openPb.py  openTensorboard.py  openTflite.py  tensor.py  variables.py
Tips/: README.md
(+7 files in other folders)
